--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,6 +23,7 @@ jobs:
           rm ./service-account-key.json
         env:
           FIREBASE_ADMIN_CREDENTIALS: ${{ secrets.FIREBASE_ADMIN_CREDENTIALS }}
+          VITE_API_BASE_URL: https://gym-management-api-21018123230.asia-southeast1.run.app/api
           
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
