fix issue and redeploy

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,11 +19,8 @@ jobs:
         run: |
           echo '${{ secrets.FIREBASE_ADMIN_CREDENTIALS }}' > ./service-account-key.json
           export GOOGLE_APPLICATION_CREDENTIALS="./service-account-key.json"
-          npm run build
+          VITE_API_BASE_URL=https://gym-management-api-21018123230.asia-southeast1.run.app/api npm run build
           rm ./service-account-key.json
-        env:
-          FIREBASE_ADMIN_CREDENTIALS: ${{ secrets.FIREBASE_ADMIN_CREDENTIALS }}
-          VITE_API_BASE_URL: https://gym-management-api-21018123230.asia-southeast1.run.app/api
           
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
