--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -60,10 +60,37 @@ jobs:
           # Initialize Firebase project
           echo '{"projects":{"default":"gymhubtech-67e6f"}}' > .firebaserc
           
-          # Verify firebase.json exists
+          # CRITICAL: Add site ID to firebase.json (required for channel deployments)
           if [ ! -f "firebase.json" ]; then
             echo "ERROR: firebase.json not found!"
             exit 1
+          fi
+          
+          # Always add site ID to hosting config (required for channel deployments)
+          echo "Adding site ID to firebase.json..."
+          # Use jq to add site field to hosting config
+          if command -v jq &> /dev/null; then
+            # Check if hosting is an object (single config)
+            if jq -e '.hosting | type == "object"' firebase.json > /dev/null 2>&1; then
+              jq '.hosting.site = "gymhubtech-67e6f"' firebase.json > firebase.json.tmp && mv firebase.json.tmp firebase.json
+            # Check if hosting is an array (multiple configs)
+            elif jq -e '.hosting | type == "array"' firebase.json > /dev/null 2>&1; then
+              jq '.hosting[0].site = "gymhubtech-67e6f"' firebase.json > firebase.json.tmp && mv firebase.json.tmp firebase.json
+            fi
+            echo "Updated firebase.json with site ID using jq"
+          else
+            # Fallback: use node if jq not available
+            node -e "
+              const fs = require('fs');
+              const config = JSON.parse(fs.readFileSync('firebase.json', 'utf8'));
+              if (Array.isArray(config.hosting)) {
+                config.hosting[0].site = 'gymhubtech-67e6f';
+              } else if (config.hosting) {
+                config.hosting.site = 'gymhubtech-67e6f';
+              }
+              fs.writeFileSync('firebase.json', JSON.stringify(config, null, 2));
+              console.log('Updated firebase.json with site ID using node');
+            "
           fi
           
           # Verify dist folder exists
@@ -72,11 +99,17 @@ jobs:
             exit 1
           fi
           
-          # Deploy to preview channel
+          # Show firebase.json for debugging
+          echo "=== firebase.json ==="
+          cat firebase.json
+          echo ""
+          
+          # Deploy to preview channel using hosting:channel:deploy
           CHANNEL_ID="pr-${{ github.event.pull_request.number }}"
           echo "Deploying to channel: $CHANNEL_ID"
           
-          firebase deploy --only hosting --channel $CHANNEL_ID --project gymhubtech-67e6f --non-interactive
+          # Use hosting:channel:deploy with explicit site flag (required for channel deployments)
+          firebase hosting:channel:deploy $CHANNEL_ID --site gymhubtech-67e6f --project gymhubtech-67e6f --non-interactive
           
           # Cleanup
           rm -f ./service-account-key.json
